--- a/packages/plugin-css/test/fixtures/flat-contexts/want.css
+++ b/packages/plugin-css/test/fixtures/flat-contexts/want.css
@@ -4,10 +4,10 @@
 
 
 :root {
-  --primitives-dark-blue: color(srgb 0.05078125 0.16015625 0.46875);
-  --primitives-dark-orange: color(srgb 0.4765625 0.1015625 0.109375);
-  --primitives-light-blue: color(srgb 0.5625 0.73046875 1);
-  --primitives-light-orange: color(srgb 0.9765625 0.83203125 0.82421875);
+  --primitives-dark-blue: rgb(5.0781% 16.016% 46.875%);
+  --primitives-dark-orange: rgb(47.656% 10.156% 10.938%);
+  --primitives-light-blue: rgb(56.25% 73.047% 100%);
+  --primitives-light-orange: rgb(97.656% 83.203% 82.422%);
 }
 
 
