Undo an ambitious transformer change

--- a/packages/plugin-css/test/fixtures/ds-github-primer/want.css
+++ b/packages/plugin-css/test/fixtures/ds-github-primer/want.css
@@ -5843,7 +5843,7 @@
   --avatar-border-color: var(--border-color-translucent);
   --avatar-shadow: 0 0 0 2px var(--base-color-neutral-0);
   --base-color-black: rgb(0.39216% 1.5686% 3.5294%);
-  --base-color-neutral-13: var(--base-color-black);
+  --base-color-neutral-13: var(--base-color-white);
   --bg-color-black: var(--base-color-neutral-13);
   --border-color-translucent: var(--base-color-neutral-13);
   --button-danger-border-color-active: var(--button-danger-border-color-hover);
@@ -5990,8 +5990,8 @@
   --button-counter-primary-bg-color-rest: var(--base-color-green-9);
   --button-keybinding-hint-primary-bg-color-disabled: var(--button-counter-primary-bg-color-rest);
   --button-keybinding-hint-primary-bg-color-rest: var(--button-counter-primary-bg-color-rest);
-  --base-color-inset: var(--base-color-neutral-0);
-  --base-color-neutral-0: var(--base-color-white);
+  --base-color-inset: var(--base-color-black);
+  --base-color-neutral-0: var(--base-color-black);
   --bg-color-default: var(--base-color-neutral-0);
   --bg-color-white: var(--base-color-neutral-0);
   --button-danger-fg-color-active: var(--base-color-neutral-0);
@@ -6030,7 +6030,7 @@
   --overlay-bg-color: var(--base-color-neutral-0);
   --side-nav-bg-color-selected: var(--base-color-neutral-0);
   --tooltip-fg-color: var(--fg-color-on-emphasis);
-  --base-color-neutral-1: rgb(96.471% 97.255% 98.039%);
+  --base-color-neutral-1: rgb(5.098% 6.6667% 9.0196%);
   --bg-color-inset: var(--bg-color-muted);
   --bg-color-muted: var(--base-color-neutral-1);
   --button-danger-bg-color-rest: var(--control-bg-color-rest);
@@ -6044,7 +6044,7 @@
   --diff-blob-empty-num-bg-color: var(--bg-color-muted);
   --page-header-bg-color: var(--bg-color-muted);
   --timeline-badge-bg-color: var(--bg-color-muted);
-  --base-color-neutral-2: rgb(93.725% 94.902% 96.078%);
+  --base-color-neutral-2: rgb(8.2353% 10.588% 13.725%);
   --bg-color-disabled: var(--base-color-neutral-2);
   --button-danger-bg-color-disabled: var(--control-bg-color-disabled);
   --button-default-bg-color-disabled: var(--control-bg-color-disabled);
@@ -6062,17 +6062,17 @@
   --control-transparent-bg-color-disabled: var(--bg-color-disabled);
   --control-knob-bg-color-disabled: var(--control-bg-color-disabled);
   --control-knob-border-color-disabled: var(--control-bg-color-disabled);
-  --base-color-neutral-3: rgb(90.196% 91.765% 93.725%);
+  --base-color-neutral-3: rgb(12.941% 15.686% 18.824%);
   --button-default-bg-color-active: var(--control-bg-color-active);
   --button-default-bg-color-selected: var(--control-bg-color-active);
   --button-inactive-bg-color: var(--base-color-neutral-3);
   --control-bg-color-active: var(--base-color-neutral-3);
   --control-track-bg-color-rest: var(--base-color-neutral-3);
-  --base-color-neutral-4: rgb(87.843% 90.196% 92.157%);
+  --base-color-neutral-4: rgb(14.902% 17.255% 21.176%);
   --control-track-bg-color-hover: var(--base-color-neutral-4);
-  --base-color-neutral-5: rgb(85.49% 87.843% 90.588%);
+  --base-color-neutral-5: rgb(16.471% 19.216% 23.529%);
   --control-track-bg-color-active: var(--base-color-neutral-5);
-  --base-color-neutral-6: rgb(81.961% 85.098% 87.843%);
+  --base-color-neutral-6: rgb(18.431% 21.569% 25.882%);
   --border-default: var(--border-width-default) solid var(--border-color-default);
   --border-muted: var(--border-width-default) solid var(--border-color-muted);
   --border-neutral-muted: var(--border-width-default) solid var(--border-color-neutral-muted);
@@ -6098,9 +6098,9 @@
   --shadow-floating-small: 0 0 0 1px var(--overlay-border-color), 0 6px 12px -3px var(--base-color-neutral-12), 0 6px 18px 0 var(--base-color-neutral-12);
   --shadow-floating-xlarge: 0 0 0 1px var(--overlay-border-color), 0 56px 112px 0 var(--base-color-neutral-12);
   --underline-nav-border-color-hover: var(--border-color-muted);
-  --base-color-neutral-7: rgb(78.431% 81.961% 85.49%);
+  --base-color-neutral-7: rgb(23.922% 26.667% 30.196%);
   --overlay-backdrop-bg-color: var(--base-color-neutral-7);
-  --base-color-neutral-8: rgb(50.588% 54.51% 59.608%);
+  --base-color-neutral-8: rgb(39.608% 42.353% 46.275%);
   --bg-color-draft-muted: var(--bg-color-neutral-muted);
   --bg-color-neutral-muted: var(--base-color-neutral-8);
   --border-disabled: var(--border-width-default) solid var(--border-color-disabled);
@@ -6141,7 +6141,7 @@
   --header-border-color-divider: var(--base-color-neutral-8);
   --header-search-border-color: var(--base-color-neutral-8);
   --skeleton-loader-bg-color: var(--base-color-neutral-8);
-  --base-color-neutral-9: rgb(34.902% 38.824% 43.137%);
+  --base-color-neutral-9: rgb(56.863% 59.608% 63.137%);
   --bg-color-draft-emphasis: var(--bg-color-neutral-emphasis);
   --bg-color-neutral-emphasis: var(--base-color-neutral-9);
   --border-neutral-emphasis: var(--border-width-default) solid var(--border-color-neutral-emphasis);
@@ -6171,10 +6171,10 @@
   --fg-color-neutral: var(--base-color-neutral-9);
   --progress-bar-bg-color-neutral: var(--bg-color-neutral-emphasis);
   --underline-nav-icon-color-rest: var(--fg-color-muted);
-  --base-color-neutral-10: rgb(27.059% 29.804% 32.941%);
-  --base-color-neutral-11: rgb(22.353% 24.706% 27.451%);
+  --base-color-neutral-10: rgb(71.765% 74.118% 78.431%);
+  --base-color-neutral-11: rgb(81.961% 84.314% 87.843%);
   --color-ansi-black-bright: var(--base-color-neutral-11);
-  --base-color-neutral-12: rgb(14.51% 16.078% 18.039%);
+  --base-color-neutral-12: rgb(94.118% 96.471% 98.824%);
   --bg-color-emphasis: var(--base-color-neutral-12);
   --bg-color-inverse: var(--base-color-neutral-12);
   --button-default-fg-color-rest: var(--control-fg-color-rest);
@@ -6299,7 +6299,7 @@
   --base-color-red-8: rgb(80% 7.8431% 12.941%);
   --base-color-red-9: rgb(67.843% 0.39216% 8.6275%);
   --button-danger-shadow-selected: inset 0 1px 0 0 var(--base-color-red-9);
-  --base-color-transparent: rgb(100% 100% 100%);
+  --base-color-transparent: rgb(0% 0% 0%);
   --bg-color-transparent: var(--base-color-transparent);
   --border-transparent: var(--border-width-default) solid var(--border-color-transparent);
   --border-color-transparent: var(--base-color-transparent);
