--- a/packages/plugin-tailwind/test/fixtures/resolver/want.css
+++ b/packages/plugin-tailwind/test/fixtures/resolver/want.css
@@ -25,16 +25,20 @@
   --color-green-7: rgb(1.5686% 30.98% 11.765%);
   --color-green-8: rgb(0% 23.922% 8.6275%);
   --color-green-9: rgb(0% 17.647% 6.6667%);
-  --color-neutral-0: rgb(96.471% 97.255% 98.039%);
-  --color-neutral-1: rgb(91.765% 93.333% 94.902%);
-  --color-neutral-2: rgb(81.569% 84.314% 87.059%);
-  --color-neutral-3: rgb(68.627% 72.157% 75.686%);
-  --color-neutral-4: rgb(54.902% 58.431% 62.353%);
-  --color-neutral-5: rgb(43.137% 46.667% 50.588%);
-  --color-neutral-6: rgb(34.118% 37.647% 41.569%);
-  --color-neutral-7: rgb(25.882% 29.02% 32.549%);
-  --color-neutral-8: rgb(19.608% 21.961% 24.706%);
-  --color-neutral-9: rgb(14.118% 16.078% 18.431%);
+  --color-neutral-0: var(--base-color-white);
+  --color-neutral-1: rgb(96.471% 97.255% 98.039%);
+  --color-neutral-2: rgb(93.725% 94.902% 96.078%);
+  --color-neutral-3: rgb(90.196% 91.765% 93.725%);
+  --color-neutral-4: rgb(87.843% 90.196% 92.157%);
+  --color-neutral-5: rgb(85.49% 87.843% 90.588%);
+  --color-neutral-6: rgb(81.961% 85.098% 87.843%);
+  --color-neutral-7: rgb(78.431% 81.961% 85.49%);
+  --color-neutral-8: rgb(50.588% 54.51% 59.608%);
+  --color-neutral-9: rgb(34.902% 38.824% 43.137%);
+  --color-neutral-10: rgb(27.059% 29.804% 32.941%);
+  --color-neutral-11: rgb(22.353% 24.706% 27.451%);
+  --color-neutral-12: rgb(14.51% 16.078% 18.039%);
+  --color-neutral-13: var(--base-color-black);
   --color-orange-0: rgb(100% 94.51% 89.804%);
   --color-orange-1: rgb(100% 84.706% 70.98%);
   --color-orange-2: rgb(100% 71.765% 48.627%);
@@ -75,13 +79,14 @@
   --color-yellow-7: rgb(38.824% 23.529% 0.39216%);
   --color-yellow-8: rgb(30.196% 17.647% 0%);
   --color-yellow-9: rgb(23.137% 13.725% 0%);
-  --font-sans: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Noto Sans", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  --font-sans: "-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji'";
   --spacing-xxs: 2px;
-  --spacing-xs: var(--size-4);
-  --spacing-sm: 6px;
-  --spacing-md: var(--size-8);
-  --spacing-lg: var(--size-12);
-  --spacing-xl: var(--size-16);
+  --spacing-xs: 4px;
+  --spacing-sm: 8px;
+  --spacing-md: 12px;
+  --spacing-lg: 16px;
+  --spacing-xl: 32px;
+  --radius-default: var(--border-radius-medium);
   --radius-full: 9999px;
   --radius-large: 12px;
   --radius-medium: 6px;
@@ -122,16 +127,20 @@
   --color-green-7: rgb(5.8824% 32.549% 13.725%);
   --color-green-8: rgb(1.1765% 22.745% 8.6275%);
   --color-green-9: rgb(1.5686% 14.902% 5.8824%);
-  --color-neutral-0: rgb(94.118% 96.471% 98.824%);
-  --color-neutral-1: rgb(78.824% 81.961% 85.098%);
-  --color-neutral-2: rgb(69.412% 72.941% 76.863%);
-  --color-neutral-3: rgb(54.51% 58.039% 61.961%);
-  --color-neutral-4: rgb(43.137% 46.275% 50.588%);
-  --color-neutral-5: rgb(28.235% 30.98% 34.51%);
-  --color-neutral-6: rgb(18.824% 21.176% 23.922%);
-  --color-neutral-7: rgb(12.941% 14.902% 17.647%);
-  --color-neutral-8: rgb(8.6275% 10.588% 13.333%);
-  --color-neutral-9: rgb(5.098% 6.6667% 9.0196%);
+  --color-neutral-0: var(--base-color-black);
+  --color-neutral-1: rgb(5.098% 6.6667% 9.0196%);
+  --color-neutral-2: rgb(8.2353% 10.588% 13.725%);
+  --color-neutral-3: rgb(12.941% 15.686% 18.824%);
+  --color-neutral-4: rgb(14.902% 17.255% 21.176%);
+  --color-neutral-5: rgb(16.471% 19.216% 23.529%);
+  --color-neutral-6: rgb(18.431% 21.569% 25.882%);
+  --color-neutral-7: rgb(23.922% 26.667% 30.196%);
+  --color-neutral-8: rgb(39.608% 42.353% 46.275%);
+  --color-neutral-9: rgb(56.863% 59.608% 63.137%);
+  --color-neutral-10: rgb(71.765% 74.118% 78.431%);
+  --color-neutral-11: rgb(81.961% 84.314% 87.843%);
+  --color-neutral-12: rgb(94.118% 96.471% 98.824%);
+  --color-neutral-13: var(--base-color-white);
   --color-orange-0: rgb(100% 87.451% 71.373%);
   --color-orange-1: rgb(100% 77.647% 50.196%);
   --color-orange-2: rgb(100% 65.098% 34.118%);
@@ -145,8 +154,8 @@
   --color-purple-0: rgb(92.941% 87.059% 100%);
   --color-purple-1: rgb(88.627% 77.255% 100%);
   --color-purple-2: rgb(82.353% 65.882% 100%);
-  --color-purple-3: rgb(73.725% 54.902% 100%);
-  --color-purple-4: rgb(63.922% 44.314% 96.863%);
+  --color-purple-3: rgb(74.51% 56.078% 100%);
+  --color-purple-4: rgb(67.059% 49.02% 97.255%);
   --color-purple-5: rgb(53.725% 34.118% 89.804%);
   --color-purple-6: rgb(43.137% 25.098% 78.824%);
   --color-purple-7: rgb(33.333% 18.824% 59.608%);
@@ -172,6 +181,18 @@
   --color-yellow-7: rgb(41.176% 24.314% 0%);
   --color-yellow-8: rgb(29.412% 16.078% 0%);
   --color-yellow-9: rgb(20.392% 10.196% 0%);
+  --font-sans: "-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji'";
+  --spacing-xxs: 2px;
+  --spacing-xs: 4px;
+  --spacing-sm: 8px;
+  --spacing-md: 12px;
+  --spacing-lg: 16px;
+  --spacing-xl: 32px;
+  --radius-default: var(--border-radius-medium);
+  --radius-full: 9999px;
+  --radius-large: 12px;
+  --radius-medium: 6px;
+  --radius-small: 3px;
   --foo-single: rgb(100% 77.647% 50.196%);
   --foo-array-0: rgb(68.627% 96.078% 70.588%);
   --foo-array-1: rgb(49.412% 90.588% 52.941%);
@@ -208,16 +229,20 @@
   --color-green-7: rgb(0.39216% 23.922% 7.8431%);
   --color-green-8: rgb(0% 19.216% 6.2745%);
   --color-green-9: rgb(0% 13.725% 4.3137%);
-  --color-neutral-0: rgb(100% 100% 100%);
-  --color-neutral-1: rgb(90.588% 92.549% 94.118%);
-  --color-neutral-2: rgb(80.784% 83.529% 86.275%);
-  --color-neutral-3: rgb(67.451% 71.373% 75.294%);
-  --color-neutral-4: rgb(53.333% 57.255% 61.569%);
-  --color-neutral-5: rgb(40% 43.922% 48.235%);
-  --color-neutral-6: rgb(29.412% 32.549% 36.471%);
-  --color-neutral-7: rgb(20.392% 23.137% 26.275%);
-  --color-neutral-8: rgb(12.549% 14.51% 17.255%);
-  --color-neutral-9: rgb(5.4902% 6.6667% 8.6275%);
+  --color-neutral-0: var(--base-color-black);
+  --color-neutral-1: rgb(5.098% 6.6667% 9.0196%);
+  --color-neutral-2: rgb(8.2353% 10.588% 13.725%);
+  --color-neutral-3: rgb(12.941% 15.686% 18.824%);
+  --color-neutral-4: rgb(14.902% 17.255% 21.176%);
+  --color-neutral-5: rgb(16.471% 19.216% 23.529%);
+  --color-neutral-6: rgb(18.431% 21.569% 25.882%);
+  --color-neutral-7: rgb(23.922% 26.667% 30.196%);
+  --color-neutral-8: rgb(39.608% 42.353% 46.275%);
+  --color-neutral-9: rgb(56.863% 59.608% 63.137%);
+  --color-neutral-10: rgb(71.765% 74.118% 78.431%);
+  --color-neutral-11: rgb(81.961% 84.314% 87.843%);
+  --color-neutral-12: rgb(94.118% 96.471% 98.824%);
+  --color-neutral-13: var(--base-color-white);
   --color-orange-0: rgb(100% 94.902% 83.529%);
   --color-orange-1: rgb(100% 77.647% 48.235%);
   --color-orange-2: rgb(97.647% 58.824% 21.176%);
@@ -258,6 +283,18 @@
   --color-yellow-7: rgb(30.588% 17.255% 0%);
   --color-yellow-8: rgb(24.706% 13.333% 0%);
   --color-yellow-9: rgb(18.039% 9.4118% 0%);
+  --font-sans: "-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji'";
+  --spacing-xxs: 2px;
+  --spacing-xs: 4px;
+  --spacing-sm: 8px;
+  --spacing-md: 12px;
+  --spacing-lg: 16px;
+  --spacing-xl: 32px;
+  --radius-default: var(--border-radius-medium);
+  --radius-full: 9999px;
+  --radius-large: 12px;
+  --radius-medium: 6px;
+  --radius-small: 3px;
   --foo-single: rgb(100% 77.647% 48.235%);
   --foo-array-0: rgb(82.353% 99.608% 85.882%);
   --foo-array-1: rgb(50.98% 89.804% 58.824%);
@@ -278,7 +315,7 @@
   --color-blue-1: rgb(67.843% 86.275% 100%);
   --color-blue-2: rgb(56.863% 79.608% 100%);
   --color-blue-3: rgb(44.314% 71.765% 100%);
-  --color-blue-4: rgb(25.098% 61.961% 100%);
+  --color-blue-4: rgb(36.078% 67.451% 100%);
   --color-blue-5: rgb(25.098% 61.961% 100%);
   --color-blue-6: rgb(19.216% 54.51% 97.255%);
   --color-blue-7: rgb(14.902% 44.706% 95.294%);
@@ -287,28 +324,32 @@
   --color-green-0: rgb(67.451% 96.863% 71.373%);
   --color-green-1: rgb(44.706% 94.118% 53.333%);
   --color-green-2: rgb(29.02% 88.235% 40.784%);
-  --color-green-3: rgb(14.902% 80.392% 30.196%);
-  --color-green-4: rgb(3.5294% 70.588% 22.745%);
+  --color-green-3: rgb(15.686% 84.314% 31.765%);
+  --color-green-4: rgb(3.9216% 78.039% 25.098%);
   --color-green-5: rgb(3.5294% 70.588% 22.745%);
   --color-green-6: rgb(0.78431% 63.529% 19.608%);
   --color-green-7: rgb(0% 54.902% 17.255%);
   --color-green-8: rgb(0% 46.667% 15.686%);
   --color-green-9: rgb(0% 38.431% 13.333%);
-  --color-neutral-0: rgb(100% 100% 100%);
-  --color-neutral-1: rgb(94.118% 95.294% 96.471%);
-  --color-neutral-2: rgb(85.098% 87.059% 89.02%);
-  --color-neutral-3: rgb(74.118% 76.863% 80%);
-  --color-neutral-4: rgb(61.961% 65.49% 70.196%);
-  --color-neutral-5: rgb(47.843% 50.98% 55.686%);
-  --color-neutral-6: rgb(32.157% 34.902% 39.216%);
-  --color-neutral-7: rgb(15.294% 16.863% 20%);
-  --color-neutral-8: rgb(15.294% 16.863% 20%);
-  --color-neutral-9: rgb(3.9216% 4.7059% 6.2745%);
+  --color-neutral-0: var(--base-color-black);
+  --color-neutral-1: rgb(5.098% 6.6667% 9.0196%);
+  --color-neutral-2: rgb(8.2353% 10.588% 13.725%);
+  --color-neutral-3: rgb(12.941% 15.686% 18.824%);
+  --color-neutral-4: rgb(14.902% 17.255% 21.176%);
+  --color-neutral-5: rgb(16.471% 19.216% 23.529%);
+  --color-neutral-6: rgb(18.431% 21.569% 25.882%);
+  --color-neutral-7: rgb(23.922% 26.667% 30.196%);
+  --color-neutral-8: rgb(39.608% 42.353% 46.275%);
+  --color-neutral-9: rgb(56.863% 59.608% 63.137%);
+  --color-neutral-10: rgb(71.765% 74.118% 78.431%);
+  --color-neutral-11: rgb(81.961% 84.314% 87.843%);
+  --color-neutral-12: rgb(94.118% 96.471% 98.824%);
+  --color-neutral-13: var(--base-color-white);
   --color-orange-0: rgb(100% 88.235% 70.588%);
   --color-orange-1: rgb(100% 81.176% 52.549%);
   --color-orange-2: rgb(100% 71.765% 34.118%);
   --color-orange-3: rgb(99.608% 60.392% 17.647%);
-  --color-orange-4: rgb(90.588% 50.588% 11.373%);
+  --color-orange-4: rgb(95.686% 54.51% 14.51%);
   --color-orange-5: rgb(90.588% 50.588% 11.373%);
   --color-orange-6: rgb(83.529% 43.922% 7.8431%);
   --color-orange-7: rgb(74.902% 36.863% 3.9216%);
@@ -318,7 +359,7 @@
   --color-purple-1: rgb(90.196% 80% 100%);
   --color-purple-2: rgb(85.882% 71.765% 100%);
   --color-purple-3: rgb(79.608% 61.961% 100%);
-  --color-purple-4: rgb(71.765% 50.196% 100%);
+  --color-purple-4: rgb(74.902% 56.078% 100%);
   --color-purple-5: rgb(72.157% 49.804% 100%);
   --color-purple-6: rgb(65.098% 41.961% 100%);
   --color-purple-7: rgb(58.431% 30.98% 99.216%);
@@ -328,7 +369,7 @@
   --color-red-1: rgb(100% 78.824% 78.039%);
   --color-red-2: rgb(100% 69.412% 68.627%);
   --color-red-3: rgb(100% 58.039% 57.255%);
-  --color-red-4: rgb(100% 41.569% 41.176%);
+  --color-red-4: rgb(100% 50.196% 50.196%);
   --color-red-5: rgb(100% 41.569% 41.176%);
   --color-red-6: rgb(100% 26.667% 27.059%);
   --color-red-7: rgb(90.98% 16.471% 18.431%);
@@ -338,18 +379,30 @@
   --color-yellow-1: rgb(98.431% 83.922% 41.176%);
   --color-yellow-2: rgb(96.863% 78.431% 26.275%);
   --color-yellow-3: rgb(94.118% 71.765% 18.431%);
-  --color-yellow-4: rgb(87.843% 60.784% 7.451%);
+  --color-yellow-4: rgb(92.941% 66.667% 15.294%);
   --color-yellow-5: rgb(87.843% 60.784% 7.451%);
   --color-yellow-6: rgb(78.431% 52.157% 3.1373%);
   --color-yellow-7: rgb(68.235% 44.314% 1.5686%);
   --color-yellow-8: rgb(58.039% 36.471% 0.78431%);
   --color-yellow-9: rgb(48.235% 28.627% 0%);
+  --font-sans: "-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji'";
+  --spacing-xxs: 2px;
+  --spacing-xs: 4px;
+  --spacing-sm: 8px;
+  --spacing-md: 12px;
+  --spacing-lg: 16px;
+  --spacing-xl: 32px;
+  --radius-default: var(--border-radius-medium);
+  --radius-full: 9999px;
+  --radius-large: 12px;
+  --radius-medium: 6px;
+  --radius-small: 3px;
   --foo-single: rgb(100% 81.176% 52.549%);
   --foo-array-0: rgb(67.451% 96.863% 71.373%);
   --foo-array-1: rgb(44.706% 94.118% 53.333%);
   --foo-array-2: rgb(29.02% 88.235% 40.784%);
-  --foo-array-3: rgb(14.902% 80.392% 30.196%);
-  --foo-array-4: rgb(3.5294% 70.588% 22.745%);
+  --foo-array-3: rgb(15.686% 84.314% 31.765%);
+  --foo-array-4: rgb(3.9216% 78.039% 25.098%);
   --foo-array-5: rgb(3.5294% 70.588% 22.745%);
   --foo-array-6: rgb(0.78431% 63.529% 19.608%);
   --foo-array-7: rgb(0% 54.902% 17.255%);
