fix: add plugin-sass tests

--- a/packages/plugin-sass/test/fixtures/basic/want.css
+++ b/packages/plugin-sass/test/fixtures/basic/want.css
@@ -3,37 +3,40 @@
  * ------------------------------------------- */
 
 :root {
-  --ds-border-std: 1px solid color(srgb 0.050980392156862744 0.011764705882352941 0);
-  --ds-color-red: color(srgb 1 0 0);
-  --ds-color-green: color(srgb 0 1 0);
-  --ds-color-blue: color(srgb 0 1 0);
+  --ds-border-std: 1px solid rgb(5% 1.2% 0%);
+  --ds-color-blue: rgb(0% 0% 100%);
+  --ds-color-green: rgb(0% 100% 0%);
+  --ds-color-red: rgb(100% 0% 0%);
   --ds-color-redgreenblue: var(--ds-color-red);
-  --ds-gradient-g-b: color(srgb 0 1 0) 0%, color(srgb 0 0 1) 100%;
-  --ds-typography-family-body: "IBM Plex Sans", "-system-ui", sans-serif;
-  --ds-typography-family-heading: "Helvetica";
-  --ds-typography-page-title-font-family: var(--ds-typography-family-heading);
-  --ds-typography-page-title-font-size: 48px;
-  --ds-typography-page-title-font-weight: 600;
-  --ds-typography-page-title-line-height: 1.25;
-  --ds-typography-page-title-letter-spacing: 0.125em;
-  --ds-typography-subheading-font-family: var(--ds-typography-family-heading);
-  --ds-typography-subheading-font-size: 18px;
-  --ds-typography-subheading-font-weight: 500;
-  --ds-typography-subheading-line-height: 1.375;
-  --ds-typography-subheading-letter-spacing: 0.25em;
-  --ds-typography-subheading-text-transform: uppercase;
+  --ds-gradient-g-b: rgb(0% 100% 0%) 0%, rgb(0% 0% 100%) 100%;
+  --ds-shadow: 0 4px 8px 0 rgb(0% 0% 0% / 0.1);
+  --ds-transition: 0ms 0ms cubic-bezier(0.4, 0, 0.6, 1);
+  --ds-typography-body-font-family: var(--ds-typography-family-body);
+  --ds-typography-body-font-size: 16px;
+  --ds-typography-body-font-weight: 400;
+  --ds-typography-body-line-height: 1.5;
+  --ds-typography-body-letter-spacing: 0;
+  --ds-typography-body: var(--ds-typography-body-font-weight) var(--ds-typography-body-font-size)/var(--ds-typography-body-line-height) var(--ds-typography-body-font-family);
   --ds-typography-callout-font-family: var(--ds-typography-family-body);
   --ds-typography-callout-font-size: 18px;
   --ds-typography-callout-font-weight: 300;
   --ds-typography-callout-font-style: italic;
   --ds-typography-callout-line-height: 1.5;
-  --ds-typography-body-font-family: var(--ds-typography-family-body);
-  --ds-typography-body-font-size: 16px;
-  --ds-typography-body-font-weight: 400;
-  --ds-typography-body-line-height: 1.5;
-  --ds-shadow: 0px 4px 8px 0px rgb(0% 0% 0% / 0.1);
-  --ds-transition: var(--ds-transition-duration) var(--ds-transition-delay) var(--ds-transition-timing-function);
-  --ds-transition-duration: 0ms;
-  --ds-transition-delay: 0ms;
-  --ds-transition-timing-function: cubic-bezier(0.4, 0, 0.6, 1);
+  --ds-typography-callout-letter-spacing: 0;
+  --ds-typography-callout: var(--ds-typography-callout-font-style) var(--ds-typography-callout-font-weight) var(--ds-typography-callout-font-size)/var(--ds-typography-callout-line-height) var(--ds-typography-callout-font-family);
+  --ds-typography-family-body: "IBM Plex Sans", -system-ui, sans-serif;
+  --ds-typography-family-heading: "Helvetica";
+  --ds-typography-page-title-font-family: var(--ds-typography-family-heading);
+  --ds-typography-page-title-font-size: 48px;
+  --ds-typography-page-title-font-weight: 600;
+  --ds-typography-page-title-line-height: 1.25;
+  --ds-typography-page-title-letter-spacing: 0.125rem;
+  --ds-typography-page-title: var(--ds-typography-page-title-font-weight) var(--ds-typography-page-title-font-size)/var(--ds-typography-page-title-line-height) var(--ds-typography-page-title-font-family);
+  --ds-typography-subheading-font-family: var(--ds-typography-family-heading);
+  --ds-typography-subheading-font-size: 18px;
+  --ds-typography-subheading-font-weight: 500;
+  --ds-typography-subheading-line-height: 1.375;
+  --ds-typography-subheading-letter-spacing: 0.25rem;
+  --ds-typography-subheading-text-transform: uppercase;
+  --ds-typography-subheading: var(--ds-typography-subheading-font-weight) var(--ds-typography-subheading-font-size)/var(--ds-typography-subheading-line-height) var(--ds-typography-subheading-font-family);
 }
