--- a/www/src/components/head-meta.astro
+++ b/www/src/components/head-meta.astro
@@ -1,5 +1,5 @@
 ---
-import '@terrazzo/tokens/dist/index.css';
+import '@terrazzo/tokens/index.css';
 import '@terrazzo/fonts/fragment-mono.css';
 import '@terrazzo/fonts/instrument-sans.css';
 import '@terrazzo/tiles/dist/all-components.css';
