--- a/packages/tiles/src/Button/Button.css
+++ b/packages/tiles/src/Button/Button.css
@@ -2,7 +2,7 @@
   --tz-button-text: var(--tz-color-bg-1);
   --tz-button-bg: var(--tz-color-text-1);
   --tz-button-border: var(--tz-button-bg);
-  --tz-button-height: 3rem;
+  --tz-button-height: var(--tz-space-control-m);
   --tz-button-gap: var(--tz-space-200);
   --tz-button-padding: 1em;
 
