--- a/www/src/styles/docs.css
+++ b/www/src/styles/docs.css
@@ -275,7 +275,7 @@
     display: inline-block;
     line-height: 1;
     padding-block: 0.125em;
-    padding-inline: 0.37 5em;
+    padding-inline: 0.375em;
   }
 
   tr:nth-of-type(even) td {
