--- a/packages/token-lab/src/styles/tokens.css
+++ b/packages/token-lab/src/styles/tokens.css
@@ -27,8 +27,10 @@
   --tz-color-base-gray-400: rgb(24.314% 22.353% 21.176%);
   --tz-color-base-gray-500: rgb(35.29% 34.94% 31.37%);
   --tz-color-border-1: var(--tz-color-base-gray-500);
+  --tz-color-icon-100: var(--tz-color-base-gray-500);
   --tz-color-base-gray-600: rgb(46.667% 43.922% 41.961%);
   --tz-color-border-2: var(--tz-color-base-gray-600);
+  --tz-color-icon-200: var(--tz-color-base-gray-600);
   --tz-color-text-3: var(--tz-color-base-gray-600);
   --tz-color-base-gray-700: rgb(58.039% 55.686% 53.725%);
   --tz-color-base-gray-800: rgb(70.196% 67.843% 65.882%);
@@ -47,6 +49,7 @@
   --tz-color-base-lime-500: rgb(54.51% 78.431% 0%);
   --tz-color-base-lime-600: rgb(66.667% 92.157% 20.392%);
   --tz-color-border-focus: var(--tz-color-base-lime-600);
+  --tz-color-icon-selected: var(--tz-color-base-lime-600);
   --tz-color-base-lime-700: rgb(72.549% 95.294% 37.647%);
   --tz-color-bg-selected-hint: var(--tz-color-base-lime-700);
   --tz-color-base-lime-800: rgb(78.431% 98.431% 50.98%);
@@ -68,12 +71,21 @@
   --tz-ease-quint-in: cubic-bezier(0.64, 0, 0.78, 0);
   --tz-ease-quint-in-out: cubic-bezier(0.83, 0, 0.17, 1);
   --tz-ease-quint-out: cubic-bezier(0.22, 1, 0.36, 1);
+  --tz-font-body-font-family: var(--tz-font-sans);
+  --tz-font-body-font-variation-settings: "wght" 400;
+  --tz-font-body-font-weight: 400;
+  --tz-font-body-font-size: 0.875rem;
+  --tz-font-body-letter-spacing: 0;
+  --tz-font-body-line-height: 1.4375;
+  --tz-font-body:
+    var(--tz-font-body-font-weight) var(--tz-font-body-font-size) / var(--tz-font-body-line-height)
+    var(--tz-font-body-font-family);
   --tz-font-body-longform-font-family: var(--tz-font-sans);
   --tz-font-body-longform-font-variation-settings: "wght" 400;
   --tz-font-body-longform-font-weight: 400;
   --tz-font-body-longform-font-size: 1.125rem;
-  --tz-font-body-longform-line-height: 1.4375;
   --tz-font-body-longform-letter-spacing: -0.0025rem;
+  --tz-font-body-longform-line-height: 1.4375;
   --tz-font-body-longform:
     var(--tz-font-body-longform-font-weight) var(--tz-font-body-longform-font-size) /
     var(--tz-font-body-longform-line-height) var(--tz-font-body-longform-font-family);
@@ -174,10 +186,11 @@
   --tz-space-400: 1rem;
   --tz-space-500: 1.5rem;
   --tz-space-600: 2rem;
-  --tz-space-control-m: var(--tz-space-600);
   --tz-space-700: 2.5rem;
   --tz-space-800: 3rem;
   --tz-space-900: 4rem;
+  --tz-space-control-l: 3rem;
+  --tz-space-control-m: 2rem;
   --tz-space-control-s: 1.75rem;
   --tz-timing-default: 100ms;
   --tz-timing-deliberate: 500ms;
@@ -212,8 +225,10 @@
     --tz-color-base-gray-400: rgb(24.314% 22.353% 21.176%);
     --tz-color-base-gray-500: rgb(35.29% 34.94% 31.37%);
     --tz-color-border-1: var(--tz-color-base-gray-500);
+    --tz-color-icon-100: var(--tz-color-base-gray-600);
     --tz-color-base-gray-600: rgb(46.667% 43.922% 41.961%);
     --tz-color-border-2: var(--tz-color-base-gray-400);
+    --tz-color-icon-200: var(--tz-color-base-gray-500);
     --tz-color-text-3: var(--tz-color-base-gray-700);
     --tz-color-base-gray-700: rgb(58.039% 55.686% 53.725%);
     --tz-color-base-gray-800: rgb(70.196% 67.843% 65.882%);
@@ -232,6 +247,7 @@
     --tz-color-base-lime-500: rgb(54.51% 78.431% 0%);
     --tz-color-base-lime-600: rgb(66.667% 92.157% 20.392%);
     --tz-color-border-focus: var(--tz-color-base-lime-600);
+    --tz-color-icon-selected: var(--tz-color-base-lime-600);
     --tz-color-base-lime-700: rgb(72.549% 95.294% 37.647%);
     --tz-color-bg-selected-hint: var(--tz-color-base-lime-200);
     --tz-color-base-lime-800: rgb(78.431% 98.431% 50.98%);
@@ -253,12 +269,21 @@
     --tz-ease-quint-in: cubic-bezier(0.64, 0, 0.78, 0);
     --tz-ease-quint-in-out: cubic-bezier(0.83, 0, 0.17, 1);
     --tz-ease-quint-out: cubic-bezier(0.22, 1, 0.36, 1);
+    --tz-font-body-font-family: var(--tz-font-sans);
+    --tz-font-body-font-variation-settings: "wght" 400;
+    --tz-font-body-font-weight: 400;
+    --tz-font-body-font-size: 0.875rem;
+    --tz-font-body-letter-spacing: 0;
+    --tz-font-body-line-height: 1.4375;
+    --tz-font-body:
+      var(--tz-font-body-font-weight) var(--tz-font-body-font-size) / var(--tz-font-body-line-height)
+      var(--tz-font-body-font-family);
     --tz-font-body-longform-font-family: var(--tz-font-sans);
     --tz-font-body-longform-font-variation-settings: "wght" 400;
     --tz-font-body-longform-font-weight: 400;
     --tz-font-body-longform-font-size: 1.125rem;
-    --tz-font-body-longform-line-height: 1.4375;
     --tz-font-body-longform-letter-spacing: -0.0025rem;
+    --tz-font-body-longform-line-height: 1.4375;
     --tz-font-body-longform:
       var(--tz-font-body-longform-font-weight) var(--tz-font-body-longform-font-size) /
       var(--tz-font-body-longform-line-height) var(--tz-font-body-longform-font-family);
@@ -359,10 +384,11 @@
     --tz-space-400: 1rem;
     --tz-space-500: 1.5rem;
     --tz-space-600: 2rem;
-    --tz-space-control-m: var(--tz-space-600);
     --tz-space-700: 2.5rem;
     --tz-space-800: 3rem;
     --tz-space-900: 4rem;
+    --tz-space-control-l: 3rem;
+    --tz-space-control-m: 2rem;
     --tz-space-control-s: 1.75rem;
     --tz-timing-default: 100ms;
     --tz-timing-deliberate: 500ms;
@@ -397,8 +423,10 @@
   --tz-color-base-gray-400: rgb(24.314% 22.353% 21.176%);
   --tz-color-base-gray-500: rgb(35.29% 34.94% 31.37%);
   --tz-color-border-1: var(--tz-color-base-gray-500);
+  --tz-color-icon-100: var(--tz-color-base-gray-600);
   --tz-color-base-gray-600: rgb(46.667% 43.922% 41.961%);
   --tz-color-border-2: var(--tz-color-base-gray-400);
+  --tz-color-icon-200: var(--tz-color-base-gray-500);
   --tz-color-text-3: var(--tz-color-base-gray-700);
   --tz-color-base-gray-700: rgb(58.039% 55.686% 53.725%);
   --tz-color-base-gray-800: rgb(70.196% 67.843% 65.882%);
@@ -417,6 +445,7 @@
   --tz-color-base-lime-500: rgb(54.51% 78.431% 0%);
   --tz-color-base-lime-600: rgb(66.667% 92.157% 20.392%);
   --tz-color-border-focus: var(--tz-color-base-lime-600);
+  --tz-color-icon-selected: var(--tz-color-base-lime-600);
   --tz-color-base-lime-700: rgb(72.549% 95.294% 37.647%);
   --tz-color-bg-selected-hint: var(--tz-color-base-lime-200);
   --tz-color-base-lime-800: rgb(78.431% 98.431% 50.98%);
@@ -438,12 +467,21 @@
   --tz-ease-quint-in: cubic-bezier(0.64, 0, 0.78, 0);
   --tz-ease-quint-in-out: cubic-bezier(0.83, 0, 0.17, 1);
   --tz-ease-quint-out: cubic-bezier(0.22, 1, 0.36, 1);
+  --tz-font-body-font-family: var(--tz-font-sans);
+  --tz-font-body-font-variation-settings: "wght" 400;
+  --tz-font-body-font-weight: 400;
+  --tz-font-body-font-size: 0.875rem;
+  --tz-font-body-letter-spacing: 0;
+  --tz-font-body-line-height: 1.4375;
+  --tz-font-body:
+    var(--tz-font-body-font-weight) var(--tz-font-body-font-size) / var(--tz-font-body-line-height)
+    var(--tz-font-body-font-family);
   --tz-font-body-longform-font-family: var(--tz-font-sans);
   --tz-font-body-longform-font-variation-settings: "wght" 400;
   --tz-font-body-longform-font-weight: 400;
   --tz-font-body-longform-font-size: 1.125rem;
-  --tz-font-body-longform-line-height: 1.4375;
   --tz-font-body-longform-letter-spacing: -0.0025rem;
+  --tz-font-body-longform-line-height: 1.4375;
   --tz-font-body-longform:
     var(--tz-font-body-longform-font-weight) var(--tz-font-body-longform-font-size) /
     var(--tz-font-body-longform-line-height) var(--tz-font-body-longform-font-family);
@@ -544,10 +582,11 @@
   --tz-space-400: 1rem;
   --tz-space-500: 1.5rem;
   --tz-space-600: 2rem;
-  --tz-space-control-m: var(--tz-space-600);
   --tz-space-700: 2.5rem;
   --tz-space-800: 3rem;
   --tz-space-900: 4rem;
+  --tz-space-control-l: 3rem;
+  --tz-space-control-m: 2rem;
   --tz-space-control-s: 1.75rem;
   --tz-timing-default: 100ms;
   --tz-timing-deliberate: 500ms;
